# Unicode-console

./: CMakeLists.txt  Console.cpp  Console.hpp  README.md  example.cpp
examples/: CMakeLists.txt  example.cpp
include/: unicode_console.hpp
source/: unicode_console.cpp
